# FLUX-A-Custom-Made-Deep-Learning-Framework

./: .gitignore  Adaptive Learning Algorithms.cpp  Adaptive Learning Algorithms.h  CMakeLists.txt  Excel.cpp  Excel.h  Helper.cpp  Helper.h  LICENSE  License.md  Logic Gates.cpp  MSEGraphPlotter.cpp  MSEGraphPlotter.h  NNStructureVis .cpp  NNStructureVis .h  Neural Network Framework.cpp  Neural Network Framework.h  README.md  main.cpp
